--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.show-sql=true
 #2.5km
 parameter.distance.meters = 2500  
 #5km
-parameter.distance.meters = 5000 
+#parameter.distance.meters = 5000 
 
 
 spring.liquibase.changeLog=classpath:/db/changelog/changelog-master.xml
