--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,18 +6,7 @@ info.app.name=Api Bionexo
 info.app.description=Chllenge Bionexo
 info.app.version=@project.version@
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/api
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.tomcat.max-active=5
-spring.datasource.tomcat.initial-size=2
-spring.datasource.tomcat.max-idle=5
-spring.datasource.tomcat.min-idle=1
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.show-sql=true
+spring.profiles.active=local,postgres
 
 #2.5km
 parameter.distance.meters = 2500  
