--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,23 @@
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.1.3</spring-boot-admin.version>
 	</properties>
+	
+	 <repositories>
+	    <repository>
+	        <id>aws-release</id>
+	        <name>AWS S3 Release Repository</name>
+	        <url>s3://api-bionexo</url>
+	    </repository>
+	 </repositories>
+	
+	
+	 <distributionManagement>
+    <repository>
+        <id>aws-release</id>
+        <name>AWS S3 Release Repository</name>
+        <url>s3://api-bionexo</url>
+    </repository>
+	</distributionManagement>
 
 	<dependencies>
 	
@@ -137,6 +154,13 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		  <extensions>
+		      <extension>
+		        <groupId>org.kuali.maven.wagons</groupId>
+		        <artifactId>maven-s3-wagon</artifactId>
+		        <version>1.2.1</version>
+		      </extension>
+		    </extensions>
 	</build>
 
 </project>
