--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	
 	 <repositories>
 	    <repository>
-	        <id>aws-release</id>
+	        <id>api-bionexo</id>
 	        <name>AWS S3 Release Repository</name>
 	        <url>s3://api-bionexo</url>
 	    </repository>
@@ -32,7 +32,7 @@
 	
 	 <distributionManagement>
     <repository>
-        <id>aws-release</id>
+        <id>api-bionexo</id>
         <name>AWS S3 Release Repository</name>
         <url>s3://api-bionexo</url>
     </repository>
