--- a/pom.xml
+++ b/pom.xml
@@ -21,22 +21,18 @@
 		<spring-boot-admin.version>2.1.3</spring-boot-admin.version>
 	</properties>
 	
-	 <repositories>
-	    <repository>
-	        <id>api-bionexo</id>
-	        <name>AWS S3 Release Repository</name>
-	        <url>s3://api-bionexo</url>
-	    </repository>
-	 </repositories>
-	
-	
 	 <distributionManagement>
-    <repository>
-        <id>api-bionexo</id>
-        <name>AWS S3 Release Repository</name>
-        <url>s3://api-bionexo</url>
-    </repository>
-	</distributionManagement>
+	    <snapshotRepository>
+	      <id>repo.teamed.io</id>
+	      <url>s3://api-bionexo/snapshot</url>
+	    </snapshotRepository>
+	  </distributionManagement>
+	  <repositories>
+	    <repository>
+	      <id>repo.teamed.io</id>
+	      <url>s3://api-bionexo/release</url>
+	    </repository>
+	  </repositories>
 
 	<dependencies>
 	
