--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>br.bionexo.api</groupId>
 	<artifactId>api</artifactId>
-		<packaging>war</packaging>
+	<packaging>war</packaging>
 	
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.3</version>
 	<name>api</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -21,18 +21,16 @@
 		<spring-boot-admin.version>2.1.3</spring-boot-admin.version>
 	</properties>
 	
-	 <distributionManagement>
-	    <snapshotRepository>
-	      <id>repo.teamed.io</id>
-	      <url>s3://api-bionexo/snapshot</url>
-	    </snapshotRepository>
-	  </distributionManagement>
-	  <repositories>
-	    <repository>
-	      <id>repo.teamed.io</id>
-	      <url>s3://api-bionexo/release</url>
-	    </repository>
-	  </repositories>
+	<distributionManagement>
+	  <snapshotRepository>
+	    <id>api-bionexo</id>
+	    <url>s3://api-bionexo</url>
+	  </snapshotRepository>
+	  <repository>
+	    <id>api-bionexo</id>
+	    <url>s3://api-bionexo</url>
+	  </repository>
+	</distributionManagement>
 
 	<dependencies>
 	
@@ -150,13 +148,13 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		  <extensions>
-		      <extension>
-		        <groupId>org.kuali.maven.wagons</groupId>
-		        <artifactId>maven-s3-wagon</artifactId>
-		        <version>1.2.1</version>
-		      </extension>
-		    </extensions>
+	 <extensions>
+	   <extension>
+   <groupId>com.allogy.maven.wagon</groupId>
+   <artifactId>maven-s3-wagon</artifactId>
+   <version>1.1.0</version>
+</extension> 
+	  </extensions>
 	</build>
 
 </project>
